--- a/index.html
+++ b/index.html
@@ -30,22 +30,26 @@
 				<div class="box">
 					<section>
 							<div class="header">
-							<img src="./assets/images/image.png" class="icon">
+							<img src="./assets/images/image.png" class="icon" alt="A picture of me.">
 							</div>
 						<div class="main">
-							<h1>About</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-<h2>Projects</h2>
-<p>Ut enim ad minim veniam <a href="example.com">quis nostrud exercitation</a>, <a href="example.com">ullamco laboris nisi ut aliquip</a>, <a href="example.com">ex ea commodo consequat</a>.</p>
-<h3>Contact</h3>
-<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+							<h1>About Me</h1>
+<p>Lorem ipsum dolor sit amet, <em><strong>consectetur adipiscing elit</strong></em>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<h2>Header 2</h2>
+<p>Ut enim ad minim veniam <a href="https://example.com">quis nostrud exercitation</a>, <a href="https://example.com">ullamco laboris nisi ut aliquip</a>, <a href="https://example.com">ex ea commodo consequat</a>.</p>
+<h3>Header 3</h3>
+<p><strong>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur?</strong></p>
+<h4>Header 4</h4>
+<p><em>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em></p>
 
 						</div>
 					</section>
 			</div>
 		</div>
 		<footer>
-			<p><strong><a href="https://github.com/alwayslivid/eleventy-about-me">eleventy-about-me</a></strong> by <strong><a href="https://alwayslivid.com">AlwaysLivid</a></strong> | Powered by <strong><a href="https://www.11ty.io/">Eleventy</a></strong>.</p>
+			<p>
+				<a href="https://github.com/alwayslivid/eleventy-about-me">eleventy-about-me</a> by <a href="https://alwayslivid.com">AlwaysLivid</a> | Powered by <a href="https://www.11ty.io/">Eleventy</a>.
+			</p>
 		</footer>
 	</body>	
 </html>
