--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		</div>
 		<footer>
 			<p>
-				<a href="https://github.com/alwayslivid/eleventy-about-me">eleventy-about-me</a> by <a href="https://alwayslivid.com">AlwaysLivid</a> | Powered by <a href="https://www.11ty.io/">Eleventy</a>.
+				<a href="https://github.com/alwayslivid/eleventy-about-me">About Me</a> by <a href="https://alwayslivid.com">AlwaysLivid</a> | Powered by <a href="https://www.11ty.io/">Eleventy</a>.
 			</p>
 		</footer>
 	</body>	
